# RegularizingEmbeddings

./: .gitignore  README.md  dev.ipynb  environment.yml  pyproject.toml  run.py  tangling_examples.ipynb  wandb_check.ipynb
RegularizingEmbeddings/: amplification.py  metrics.py  regularization.py  tangling.py
RegularizingEmbeddings/data/: data_generation.py  data_utils.py
RegularizingEmbeddings/dysts_sim/: Make New Dynamics.ipynb  __init__.py  base.py  flows.py  utils.py
RegularizingEmbeddings/dysts_sim/data/: dynamical_systems.json
RegularizingEmbeddings/lightning/: data.py  model.py  train.py
RegularizingEmbeddings/models/: __init__.py  delayed_mlp.py  lru.py  mamba.py  rnns.py  s4.py  transformers.py
RegularizingEmbeddings/regularization/: amplification.py  base.py  tangling.py
_sandbox/: 2025-01-31 - Analyzing Models.ipynb  2025-01-31 - Checking Noise Amplification.ipynb  2025-01-31 - Fixing Noise Amplification.ipynb  2025-01-31 - Loading Models w Hydra.ipynb
conf/: config.yaml  config_amplification_sweep.yaml
conf/data/: dysts.yaml
conf/evals/: evals.yaml
conf/model/: delaymlp.yaml  gpt.yaml  lru.yaml  rnn.yaml
conf/models/: lru.yaml
conf/regularization/: amplification.yaml  default.yaml  tangling.yaml
conf/slurm/: default.yaml
conf/training/: train.yaml
config/: base.yaml  config.yaml  train.yaml
config/models/: gpt.yaml  lru.yaml
experiments/: dev.ipynb
outputs/2025-01-31/13-15-39/.hydra/: hydra.yaml
outputs/2025-01-31/13-18-40/.hydra/: config.yaml  hydra.yaml
src/: metrics.py
src/lightning/: data.py  model.py  train.py
